# codex-gate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  prek.toml
.github/workflows/: binary-release.yml  docker-images.yml
_doc/: 2026-04-14-progress-and-responses-channel.md
backend/: Cargo.toml
backend/src/: admin.rs  cache.rs  codex_oauth.rs  config.rs  crypto.rs  db.rs  health.rs  http.rs  key_rotation.rs  log_archive.rs  main.rs  metrics.rs  openai.rs  proxy.rs  runtime_settings.rs  selector.rs  state.rs  telemetry.rs  types.rs  upstream.rs  util.rs
backend/src/cache/: api_key_cache.rs  policy.rs  upstream_cache.rs
deploy/: binary.env.example
deploy/linux/: run-little-gate.sh
deploy/systemd/: little-gate.service
deploy/windows/: run-little-gate.ps1
docs/: binary-deployment.md
frontend/: CLAUDE.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ActivityHeatmap.tsx  ApiKeysPage.tsx  LocaleSwitch.tsx  LogsPage.tsx  PricesPage.tsx  ProvidersPage.tsx  RecentLogs.tsx  SettingsPage.tsx  StatCard.tsx  TopModels.tsx  TrendChart.tsx
frontend/src/components/console/: DetailDrawer.tsx  EmptyState.tsx  FilterBar.tsx  PageHeader.tsx  QuickActions.tsx  StatsGrid.tsx  StatusBadge.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  field.tsx  input.tsx  select.tsx  separator.tsx  table.tsx  textarea.tsx
frontend/src/i18n/: en.ts  zh.ts
frontend/src/lib/: api.ts  dashboard.ts  demo.ts  format.ts  i18n.ts  types.ts
scripts/: bench_failover.py  bench_gateway.py  check_frontend_solid_init_order.mjs  docker-compose-up.sh  git-push-with-next-tag.sh  install-prek-hooks.sh  mock_upstream.py  prek-compose-up-check.sh  run_regression.py  test_openai_compatible_responses.sh
