[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
jemalloc = ["dep:jemallocator"]

[dependencies]
aes-gcm = { version = "0.10" }
base64 = "0.22"
blake3 = "1"
bytes = "1"
env_logger = "0.11"
flate2 = "1"
fastrand = "2"
hex = "0.4"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "http2", "ring", "rustls-native-certs", "tls12"] }
hyper-util = { version = "0.1", features = ["full"] }
jemallocator = { version = "0.5", optional = true }
log = "0.4"
mimalloc = { version = "0.1", optional = true }
memchr = "2"
parking_lot = "0.12"
pin-project-lite = "0.2"
rust_decimal = { version = "1", features = ["serde-with-str"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
tokio = { version = "1", features = ["full"] }
time = { version = "0.3", features = ["formatting"] }
ulid = "1"
